app/public/stylesheets/style.css
/* Positioning */
.ps-absolute {
    position: absolute;
}

.ps-relative {
    position: fixed;
}

.ps-fixed {
    position: fixed;
}

#manual-main{
    text-align: left;
    list-style-position: inside;
}
#loginSection {
    min-height: 45vh; /* minus the height of the footer */
}
#homeSection{
    min-height: 60vh;
}

/* Fonts */
.text-pink {
    color: #eb9095;
}

.text-white {
    color: #FFFFFF;
}

.text-blue {
    color: #007bff;
}

.monospace-font {
    font-family: "Courier New", Courier, monospace;
}

/* Backgrounds */
.bg-pink {
    background-color: #eb9095;
}

.bg-grey {
    background-color: #F9F9F9;
}

.bg-white {
    background-color: #FFFFFF;
}

.bg-blue {
    background-color: #007bff;
}

.women-in-dress-bg {
    background-image: url(../images/home_dress.jpeg); 
    background-position: center -250px;
    background-size: cover;
    min-height: 400px;
}

/* Borders */
.border-pink {
    box-shadow: 0 0 5px #eb9095;
}

.border-radius-5 {
    border-radius: 5px;
}

/* Buttons */
.btn-pink {
    color: #fff;
    background-color: #eb9095;
    border-color: #eb9095;
}

.btn-pink:hover {
    color: #eb9095;
    background-color: transparent;
    background-image: none;
    border-color: #eb9095;
}

.btn-outline-pink:hover {
    color: #fff;
    background-color: #eb9095;
    border-color: #eb9095;
}

.btn-outline-pink {
    color: #eb9095;
    background-color: transparent;
    background-image: none;
    border-color: #eb9095;
}


/* Navigation */
img.logo {
    max-width: 400px;
}

.nav.header a i {
    font-size: 25px;
    color: #000;
}

.justify-start {
    margin-right: auto;
}

/* Footers and headers */
.footer {
    background-color: #eee;
    font-family: "Courier New", Courier, monospace;
}

.footer a {
    color: #000;
    font-family: "Courier New", Courier, monospace;
    text-decoration: underline;
}

footer {
    position: absolute; 
    bottom: 0; 
    width: 100%; 
}

/* Forms */

#end-signup{
    align-content: center;

}
input[type="month"]:before {
    content: attr(placeholder) !important;
    /*color: #495057; */
    margin-right: 0.5em;
  }
  input[type="month"]:focus:before,
  input[type="month"]:valid:before {
    content: "";
  }
/* Links */

a{
    text-decoration: none;
}

/* Pseudo-classes */
.hover:hover {
    cursor: pointer;
}

